# ResearchGPT

./: README.md  pyproject.toml  requirements.txt
backend/: main.py  test.py
backend/Schemas/: planner_schema.py  search_schema.py
backend/agents/: PlannerAgent.py  ResearcherAgent.py  SearchAgent.py  WriterAgent.py
backend/graphs/: graph.py
backend/routes/: chat.py  research_route.py
backend/services/: llm.py  retrieval.py  stream_service.py
backend/state/: agent_state.py
backend/tests/: test_stream.py
backend/tools/: search_tool.py  tool_registry.py
backend/utils/: event_formatter.py
frontend/: index.html
frontend/assets/css/: styles.css
frontend/assets/js/: script.js
